parslers-benchmark/src/tests/invalid/semanticErr/function/functionBadParam.wacc
# function parameter type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(int x) is
		return x
	end
	bool b = true ; 
  int x = call f(b) 
end
	
